[gd_scene load_steps=3 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 16
font_color = Color(0.867, 0.808, 0.745, 1)

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="TargetPanel" type="PanelContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 100.0

[node name="VBox" type="VBoxContainer" parent="TargetPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TargetPanel/VBox"]
layout_mode = 2
text = "TARGET SUBNET:"
label_settings = SubResource("LabelSettings_1")

[node name="TargetLabel" type="Label" parent="TargetPanel/VBox"]
layout_mode = 2
text = "192.168.1.0/24"
label_settings = SubResource("LabelSettings_1")

[node name="MaskPanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="MaskPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MaskPanel/VBox"]
layout_mode = 2
text = "CURRENT MASK:"
label_settings = SubResource("LabelSettings_1")

[node name="MaskLabel" type="Label" parent="MaskPanel/VBox"]
layout_mode = 2
text = "/24"
label_settings = SubResource("LabelSettings_1")

[node name="AlertBar" type="ProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -40.0
offset_right = -100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 120.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 0
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 2
